# BSc-Velma

./: CMakeLists.txt  README.md  package.xml
data/gazebo/worlds/: first.world  second.world
data/gazebo/worlds/Szafa/: 1.world  (+2 more)
launch/: cab_rviz_gazebo.launch  gazebo_client.launch  gazebo_world_editor.launch  offline_octo.launch  prep_octo.launch  rviz_gazebo.launch  velma_sim_stero.launch  velma_system_stero.launch
octomaps/: octo1.bt
scripts/: discoverMap.py  hello_world  moveObject.py  moveObjectInv.py  squareMake.py
system_files/: 1  calc_inert.sh  full_test.sh  inz.sh  run_config.sh  runtime.sh  runtime2.sh  single_config_run.sh
system_files/results/default/: resultsMoveObject.txt
system_files/results/pi2 pi2/: resultsMoveObject.txt
system_files/rviz configs/: obj_config.rviz
system_files/scripts/Przenoszenie-pion/: inv.py  norm.py
system_files/velma_robot - velma_description - robots/: velma.urdf.xacro - modifiable
system_files/velma_robot - velma_description - robots/0s/: velma.urdf.xacro
system_files/velma_robot - velma_description - robots/10s/: velma.urdf.xacro
system_files/velma_robot - velma_description - robots/20s/: velma.urdf.xacro
system_files/velma_robot - velma_description - robots/30s/: velma.urdf.xacro
system_files/velma_robot - velma_description - robots/40s/: velma.urdf.xacro
system_files/velma_robot - velma_description - robots/45s/: velma.urdf.xacro
system_files/velma_sim_gazebo/: lwr_gazebo.cpp1
system_files/velma_system - velma_sim_gazebo/: lwr_gazebo.cpp
system_files/worknotes/: moveObject.run  squareMake.run
(+34 files in other folders)
