<package>
  <name>stero_velma</name>
  <version>1.0.0</version>
  <description>
    This package contains python scripts STERO course.
  </description>
  <author email="dawid.seredynski@gmail.com">Dawid Seredynski</author>
  <maintainer email="dawid.seredynski@gmail.com">Dawid Seredynski</maintainer>

  <license>GNU v.2</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
